plugins {
    id 'java'
}

group = 'com.example'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    testImplementation 'org.mockito:mockito-core:5.12.0'
}

def compilerExports = [
        '--add-exports', 'jdk.compiler/com.sun.source.util=ALL-UNNAMED',
        '--add-exports', 'jdk.compiler/com.sun.source.tree=ALL-UNNAMED',
        '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
]

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.add('-parameters')
    options.compilerArgs.addAll(compilerExports)
}

tasks.test {
    useJUnitPlatform()
    jvmArgs compilerExports
}
